<resources>
    <string name="app_name">Davaleba 18</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_page">Login Page</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="hello">Hello</string>
    <string name="login">Login</string>
    <string name="register">register</string>
    <string name="create_account">Create Account</string>
    <string name="repeat_password">Repeat password</string>
    <string name="log_out">Log Out</string>
    <string name="remember_me">Remember me</string>
</resources>