<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".UI.login.screen.LoginFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/topDecor"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:src="@drawable/img"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/loginTextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:letterSpacing="0.02"
        android:text="@string/hello"
        android:textColor="@color/black"
        android:textSize="64sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topDecor" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="15dp"
        android:layout_height="18dp"
        android:layout_marginStart="14dp"
        android:elevation="8dp"
        android:src="@drawable/img_1"
        app:layout_constraintBottom_toBottomOf="@id/emailField"
        app:layout_constraintStart_toStartOf="@id/emailField"
        app:layout_constraintTop_toTopOf="@id/emailField" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/emailField"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="85dp"
        android:background="@drawable/rounded_corners"
        android:elevation="7dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:letterSpacing="0.01"
        android:padding="10dp"
        android:paddingStart="41dp"
        app:layout_constraintEnd_toEndOf="@id/loginTextTitle"
        app:layout_constraintStart_toStartOf="@id/loginTextTitle"
        app:layout_constraintTop_toBottomOf="@id/loginTextTitle"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="15dp"
        android:layout_height="18dp"
        android:layout_marginStart="14dp"
        android:elevation="8dp"
        android:src="@drawable/img_2"
        app:layout_constraintBottom_toBottomOf="@id/passwordField"
        app:layout_constraintStart_toStartOf="@id/passwordField"
        app:layout_constraintTop_toTopOf="@id/passwordField" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/eyeIcon"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_marginEnd="14dp"
        android:elevation="8dp"
        android:src="@drawable/eye_icon"
        app:layout_constraintBottom_toBottomOf="@id/passwordField"
        app:layout_constraintEnd_toEndOf="@id/passwordField"
        app:layout_constraintTop_toTopOf="@id/passwordField" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/passwordField"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="39dp"
        android:background="@drawable/rounded_corners"
        android:elevation="7dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:letterSpacing="0.01"
        android:paddingStart="41dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        app:layout_constraintEnd_toEndOf="@id/emailField"
        app:layout_constraintStart_toStartOf="@id/emailField"
        app:layout_constraintTop_toBottomOf="@id/emailField"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/rememberMeCheckBox"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@id/passwordField"
        app:layout_constraintTop_toBottomOf="@id/passwordField" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/remember_me"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@id/rememberMeCheckBox"
        app:layout_constraintStart_toEndOf="@id/rememberMeCheckBox"
        app:layout_constraintTop_toTopOf="@id/rememberMeCheckBox" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="#F97794"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/passwordField"
        app:layout_constraintStart_toStartOf="@id/passwordField"
        app:layout_constraintTop_toBottomOf="@id/rememberMeCheckBox" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerButton"
        android:layout_width="135dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="#623AA2"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/loginButton"
        app:layout_constraintStart_toStartOf="@id/loginButton"
        app:layout_constraintTop_toBottomOf="@id/loginButton" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-20dp"
        android:layout_marginBottom="-100dp"
        android:src="@drawable/img_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>