<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".UI.register.screen.RegisterFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:elevation="8dp"
        android:src="@drawable/arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/topDecor"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:src="@drawable/img"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/createAccountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:letterSpacing="0.02"
        android:text="@string/create_account"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="14dp"
        android:layout_height="11dp"
        android:layout_marginStart="14dp"
        android:elevation="8dp"
        android:src="@drawable/img_4"
        app:layout_constraintBottom_toBottomOf="@id/emailField"
        app:layout_constraintStart_toStartOf="@id/emailField"
        app:layout_constraintTop_toTopOf="@id/emailField" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/emailField"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="55dp"
        android:background="@drawable/rounded_corners"
        android:elevation="7dp"
        android:hint="@string/email"
        android:letterSpacing="0.01"
        android:paddingStart="41dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        app:layout_constraintEnd_toEndOf="@id/createAccountText"
        app:layout_constraintStart_toStartOf="@id/createAccountText"
        app:layout_constraintTop_toBottomOf="@id/createAccountText"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginStart="14dp"
        android:elevation="8dp"
        android:src="@drawable/img_5"
        app:layout_constraintBottom_toBottomOf="@id/passwordField"
        app:layout_constraintStart_toStartOf="@id/passwordField"
        app:layout_constraintTop_toTopOf="@id/passwordField" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/passwordField"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="38dp"
        android:background="@drawable/rounded_corners"
        android:elevation="7dp"
        android:hint="@string/password"
        android:letterSpacing="0.01"
        android:paddingStart="41dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        app:layout_constraintEnd_toEndOf="@id/emailField"
        app:layout_constraintStart_toStartOf="@id/emailField"
        app:layout_constraintTop_toBottomOf="@id/emailField"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginStart="14dp"
        android:elevation="8dp"
        android:src="@drawable/img_5"
        app:layout_constraintBottom_toBottomOf="@id/passwordRepeatField"
        app:layout_constraintStart_toStartOf="@id/passwordRepeatField"
        app:layout_constraintTop_toTopOf="@id/passwordRepeatField" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/passwordRepeatField"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="38dp"
        android:background="@drawable/rounded_corners"
        android:elevation="7dp"
        android:hint="@string/repeat_password"
        android:letterSpacing="0.01"
        android:paddingStart="41dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        app:layout_constraintEnd_toEndOf="@id/passwordField"
        app:layout_constraintStart_toStartOf="@id/passwordField"
        app:layout_constraintTop_toBottomOf="@id/passwordField"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerButton"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="#BA7FF2"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/passwordRepeatField"
        app:layout_constraintStart_toStartOf="@id/passwordRepeatField"
        app:layout_constraintTop_toBottomOf="@id/passwordRepeatField" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-20dp"
        android:layout_marginBottom="-110dp"
        android:src="@drawable/img_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>